kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yubiwall
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: yubiwall
  template:
    metadata:
      labels:
        app: yubiwall
    spec:
      containers:
        - name: yubiwall
          image: rctl/yubiwall:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
