kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yubiwall
spec:
  selector:
    app: yubiwall
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
